force-app/main/default/objects/Release_Request__c/Release_Request__c.object-meta.xml
<CustomObject>
    <label>Release Request</label>
    <nameField>
        <displayFormat>REL-{00000}</displayFormat>
        <label>Release Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>