force-app/main/default/objects/Release_Request__c/fields/Actual_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Deployment_Date__c</fullName>
    <description>Actual completion time</description>
    <label>Actual Deployment Date</label>
    <type>DateTime</type>
</CustomField>