force-app/main/default/objects/Release_Request__c/fields/Business_Approval__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Production gate</description>
    <label>Business Approval</label>
    <type>Checkbox</type>
</CustomField>