force-app/main/default/objects/Release_Request__c/fields/Component_Count__c.field-meta.xml
<CustomField>
    <fullName>Component_Count__c</fullName>
    <description>Code-maintained / calculated count</description>
    <label>Component Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>