force-app/main/default/objects/Release_Request__c/fields/Days_Until_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Deployment__c</fullName>
    <description>Planning visibility</description>
    <formula>ROUND(Planned_Deployment_Date__c - NOW(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Deployment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>