force-app/main/default/objects/Release_Request__c/fields/Deployment_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Item_Count__c</fullName>
    <label>Deployment Item Count</label>
    <summarizedField>Deployment_Item__c.Sequence__c</summarizedField>
    <summaryForeignKey>Deployment_Item__c.Release_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>