force-app/main/default/objects/Release_Request__c/fields/Is_Production__c.field-meta.xml
<CustomField>
    <fullName>Is_Production__c</fullName>
    <description>Quick logic helper</description>
    <formula>ISPICKVAL(Target_Environment__c , &apos;PROD&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Production</label>
    <type>Checkbox</type>
</CustomField>