force-app/main/default/objects/Release_Request__c/fields/Planned_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Deployment_Date__c</fullName>
    <description>Planned deployment window</description>
    <label>Planned Deployment Date</label>
    <type>DateTime</type>
</CustomField>