force-app/main/default/objects/Release_Request__c/fields/Release_Owner__c.field-meta.xml
<CustomField>
    <fullName>Release_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business/technical owner</description>
    <label>Release Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>