force-app/main/default/objects/Release_Request__c/fields/Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>Target_Environment__c</fullName>
    <description>Deployment target</description>
    <label>Target Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>